test/tests/stages/18_structures/invalid_types/extra_credit/scalar_required/cast_between_unions.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[32]:
  union
  identifier(u1)
  {
  int
  identifier(a)
  ;
  }
  ;
  int
  identifier(main)
  (
  void
  )
  {
  union
  identifier(u1)
  identifier(var)
  =
  {
  const int(10)
  }
  ;
  (
  union
  identifier(u1)
  )
  identifier(var)
  ;
  return
  const int(0)
  ;
  }
